--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
-    "mongoose": "^8.9.2"
+    "mongoose": "^8.9.2",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
