--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mongoose": "^8.9.2",
-    "slugify": "^1.6.6"
+    "slugify": "^1.6.6",
+    "unidecode": "^1.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
