--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.5.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mongoose": "^8.9.2",
+    "multer": "^1.4.5-lts.1",
     "slugify": "^1.6.6",
+    "streamifier": "^0.1.1",
     "unidecode": "^1.1.0"
   },
   "devDependencies": {
