--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cloudinary": "^2.5.1",
     "compression": "^1.7.5",
     "cors": "^2.8.5",
+    "discord.js": "^14.17.3",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "joi": "^17.13.3",
