--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "multer": "^1.4.5-lts.1",
     "slugify": "^1.6.6",
     "streamifier": "^0.1.1",
-    "unidecode": "^1.1.0"
+    "unidecode": "^1.1.0",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
