--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "slugify": "^1.6.6",
     "streamifier": "^0.1.1",
     "unidecode": "^1.1.0",
-    "winston": "^3.17.0"
+    "uuid": "^11.0.5",
+    "winston": "^3.17.0",
+    "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
