--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lodash": "^4.17.21",
     "mongoose": "^8.9.2",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.10.0",
     "slugify": "^1.6.6",
     "streamifier": "^0.1.1",
     "unidecode": "^1.1.0",
